--- a/templates/fractal.html
+++ b/templates/fractal.html
@@ -61,43 +61,23 @@
 
 <main>
 
-{#    <div id="plus"><a id="plushref" href="#">+</a></div>#}
-{##}
-{#    <div id="lilmenu">#}
-{#        <div id="new"><a href="#">ново стабло</a></div>#}
-{#        <div><a href="https://krcadinac.com/rad/projekti/vinaware" target="_blank">о пројекту</a></div>#}
-{#        <div><a href="https://krcadinac.com/rad/bio" target="_blank">о аутору</a></div>#}
-{#    </div>#}
-
     <div id="central-content">
 
         <div class="viz-mode">
 
             <section id="main-section">
-
                 <div id="p5sketch">
                 </div>
-
-                <div id="treeviz">
-                    <svg></svg>
-                </div>
-
+{#                <div id="treeviz"><svg></svg></div>#}
             </section>
 
-            <article id="main-article">
-                <div id="title-date"></div>
-                <div id="generated-text">
-                    {#                    енглеска је у том тренутку била страшна лица, која је, врло млада, врло добро, могла би било, чак и, да се, заувек, растају, а да ће му нога остати, ако не добије децу. она се, међутим, појави, у његовом загрљају скоро сасвим. млади су га, дакле, и, у лондону. кад стигли киша, у собу, виде да их и села, и да се из даљине. а кад су се вратили, тако, да је више од годину дана, али да је његова жена и рекла: да је то била, да је све узалуд учинио. осећао је, зачудо, да је, у том тренутку, осећао као да је, и он, могао да покаже свој утицај, оних, који се враћају на море, чак и у море, као и небо, па и у његовој, и она, полако, одлази, у своју кућу.#}
-                </div>
-            </article>
+{#            <article id="main-article">#}
+{#                <div id="title-date"></div>#}
+{#                <div id="generated-text"></div>#}
+{#            </article>#}
 
         </div>
 
-    </div>
-
-    <div id="loading" class="loading" style="display:none">
-        <img src="{{ url_for('static', filename='media/loading.gif') }}"
-             alt="текст се генерише...">
     </div>
 
 </main>
