--- a/templates/textlabs.html
+++ b/templates/textlabs.html
@@ -8,7 +8,9 @@
     <style>
 
         html, body {
-            background-color: white;
+            background-color: black;
+            height: 100%;
+            overflow: hidden;
         }
 
     </style>
@@ -20,9 +22,9 @@
     </script>
     <script type="text/javascript" src="{{ url_for('static', filename='lib/jquery.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='lib/p5.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='versions/fractal/txtpnt.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='versions/fractal/textlabs.js') }}"></script>
 
-    <title>textToPoints() p5 lab</title>
+    <title>textlabs</title>
 
 </head>
 <body>
